[package]
name = "exam_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docx-rs = "*"
calamine = "*"
thiserror = "*"
fastrand = "*"
rfd = "*"
serde = "1"
eframe = { version = "*", features = ["persistence"] }
